feat: Add Filament Media Manager plugin to AdminPanelProvider

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "filament/spatie-laravel-tags-plugin": "^3.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "tomatophp/filament-media-manager": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
